log
Sun, Sep 21, 2025 10:37:45 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, Sep 21, 2025 10:38:31 PM: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 10/70
17e4fb2
Sun, Sep 21, 2025 10:40:29 PM: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:105:9: error: implicit declaration of function 'replaceNodeInParent' [-Werror=implicit-function-declaration]
         replaceNodeInParent(tree, node, child);
         ^~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3d4cde9
Sun, Sep 21, 2025 10:42:39 PM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|6
total_score: 10/70
5663c7a
Sun, Sep 21, 2025 10:45:22 PM: 
 treemap.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 54 insertions(+), 4 deletions(-)
 tests:  26|1
total_score: 65/70
7d6b0c1
Sun, Sep 21, 2025 10:47:01 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
c33f5c4
